--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>SoYoung Park</title>
 	</head>
 	<body>
-	<p>hello world, personal website for soyoung park</p>
+	<p>soyoung park</p>
 	</body>
 </html>
 
