--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>SoYoung Park</title>
+		<link rel="stylesheet" type="text/css" href="common.css">
 	</head>
 	<body>
 	<p>soyoung park</p>
