--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>SoYoung Park</title>
-		<link rel="stylesheet" type="text/css" href="common.css">
+		<link rel="stylesheet" type="text/css" href="/common.css">
 	</head>
 	<body>
 	<p>soyoung park</p>
+	<p>University of Pennsylvania'17</p>
 	</body>
 </html>
 
