--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<body>
 	<p>soyoung park</p>
 	<p>University of Pennsylvania'17</p>
+	<p>ampersands.exit@gmail.com</p>
+	<p>email address inspired by a favorite poem by Sylvia Plath</p>
 	</body>
 </html>
 
