--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	</head>
 	<body>
 	<p>soyoung park</p>
-	<p>University of Pennsylvania'17</p>
+	<p>upenn'17</p>
+	<p>CS + Urban Studies</p>
 	<p>ampersands.exit@gmail.com</p>
 	<p>email address inspired by a favorite poem by Sylvia Plath</p>
 	</body>
