--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<p>soyoung park</p>
 	<p>upenn'17</p>
 	<p>CS + Urban Studies</p>
-	<p>ampersands.exit@gmail.com</p>
-	<p>email address inspired by a favorite poem by Sylvia Plath</p>
+	<p>ampersands dot exit at gmail dot com</p>
+	<a href="./kpop">k-pop</a>
 	</body>
 </html>
 
