--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p>upenn'17</p>
 	<p>CS + Urban Studies</p>
 	<p>ampersands dot exit at gmail dot com</p>
-	<a href="./kpop">k-pop</a>
+	<a href="../kpop.html">k-pop</a>
 	</body>
 </html>
 
