--- a/kpop.html
+++ b/kpop.html
@@ -1,1 +1,12 @@
-<a href="./twenty-three">IU | Twenty-three</a>
+<head>
+  <title>lyric translation of Twenty-three by IU</title>
+  <script> 
+     $(function(){ $("head").load("header.html") });
+   </script>
+  
+</head>
+<body>
+  
+  <a href="./twenty-three">IU | Twenty-three</a>
+
+</body>
