--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<title>SoYoung Park</title>
-		<link rel="stylesheet" type="text/css" href="/common.css">
-<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script> 
+     $(function(){ $("head").load("header.html") });
+   </script>
 	</head>
 	<body>
 	<p>soyoung park</p>
