--- a/twenty-three.html
+++ b/twenty-three.html
@@ -1,3 +1,13 @@
+<head>
+	<title>Twenty-three by IU (lyric translation)</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script> 
+     $(function(){ $("head").load("header.html") });
+   </script>
+	
+</head>
+
+<body>
 <p>I was wondering what I should put on my personal website, and was listening to this new single album release by IU, titled twenty-three, and decided to have an attempt at English translation. </p>
 	<p>le music video</p>
 	<div style="text-align:center;">
@@ -90,3 +100,4 @@ Take a guess.<br>
 		<br>
 		
 	</p>
+</body>
