--- a/kpop.html
+++ b/kpop.html
@@ -1,5 +1,5 @@
 <head>
-  <title>lyric translation of Twenty-three by IU</title>
+  <title>Dat k-pop</title>
   <script> 
      $(function(){ $("head").load("header.html") });
    </script>
@@ -7,6 +7,6 @@
 </head>
 <body>
   
-  <a href="./twenty-three">IU | Twenty-three</a>
+  <a href="../twenty-three.html">IU | Twenty-three</a>
 
 </body>
