--- a/kpop.html
+++ b/kpop.html
@@ -1,5 +1,6 @@
 <head>
   <title>Dat k-pop</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script> 
      $(function(){ $("head").load("header.html") });
    </script>
