--- a/twenty-three.html
+++ b/twenty-three.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<p style="width:50%;">I was wondering what I should put on my personal website, and was listening to this new single album release by IU, titled twenty-three, and decided to have an attempt at English translation. </p>
+<p style="width:50%; text-align:center;">I was wondering what I should put on my personal website, and was listening to this new single album release by IU, titled twenty-three, and decided to have an attempt at English translation. </p>
 	<p>le music video</p>
 	<div style="text-align:center;">
 		<iframe width="1280" height="720" src="https://www.youtube.com/embed/42Gtm4-Ax2U?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
