--- a/twenty-three.html
+++ b/twenty-three.html
@@ -22,7 +22,7 @@ and I’m a riddle.<br>
 (Question)<br>
 What am I? <br>
 <br><br>
-Take a guess.
+Take a guess.<br>
 <br><br>
 I’m twenty-three,<br>
 and don’t be wrong — because<br>
