--- a/twenty-three.html
+++ b/twenty-three.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="text-align:center;">
-<p style="width:50%; text-align:left;">I was wondering what I should put on my personal website, and was listening to this new single album release by IU, titled twenty-three, and decided to have an attempt at translating the lyric to English. </p>
+<p style="width:50%; text-align:left; display:inline-block;">I was wondering what I should put on my personal website, and was listening to this new single album release by IU, titled twenty-three, and decided to have an attempt at translating the lyric to English. </p>
 	<br>
 	<p>le music video</p>
 	<div style="text-align:center;">
