--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<p>upenn'17</p>
 	<p>CS + Urban Studies</p>
 	<p>ampersands.exit@gmail.com</p>
-	<p>email address inspired by a favorite poem by Sylvia Plath</p>
+	<p>email address inspired by one of Sylvia Plath's poems</p>
+	<p>I draw, code and implement algorithms in C. I want to develop technology tangible beyond screens. </p>
 	</body>
 </html>
 
