--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 	<head>
 		<title>SoYoung Park</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script> 
-     $(function(){ $("head").load("header.html") });
-   </script>
+		<script> 
+     			$(function(){ $("head").load("header.html") });
+   		</script>
 	</head>
+	
 	<body>
-	<p>soyoung park</p>
-	<p>upenn'17</p>
-	<p>CS + Urban Studies</p>
-	<p>ampersands.exit@gmail.com</p>
-	<p>email address inspired by one of Sylvia Plath's poems</p>
-	<p>I draw, code and implement algorithms in C. I want to develop technology tangible beyond screens. </p>
-	<p>ampersands dot exit at gmail dot com</p>
-	<a href="../kpop">k-pop</a>
+		
+		<p>soyoung park</p>
+		<p>upenn'17</p>
+		<p>CS + Urban Studies</p>
+		<p>ampersands.exit@gmail.com</p>
+		<p>email address inspired by one of Sylvia Plath's poems</p>
+		<img src="../images/unithon.jpg" style="width:100px; height:auto; padding-top:30px; padding-bottom:30px;"/>
+		<p>I draw, code and practice algorithms in C. I want to develop city-related technology. </p>
+		<p>ampersands dot exit at gmail dot com</p>
+		<a href="../kpop">k-pop</a>
+	
 	</body>
 </html>
 
