--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p>CS + Urban Studies</p>
 		<p>ampersands.exit@gmail.com</p>
 		<p>email address inspired by one of Sylvia Plath's poems</p>
-		<img src="../images/unithon.jpg" style="width:300px; height:auto; padding-top:30px; padding-bottom:30px;"/>
+		<img src="../images/unithon.jpg" style="width:300px; height:auto; padding-top:30px; padding-bottom:30px; border-radius:50%"/>
 		<p>I draw, code and practice algorithms in C. I want to develop city-related technology. </p>
 		<p>ampersands dot exit at gmail dot com</p>
 		<a href="../kpop">k-pop</a>
