--- a/twenty-three.html
+++ b/twenty-three.html
@@ -104,7 +104,7 @@ Take a guess.<br>
 	</p>
 	
 	
-	<div id="disqus_thread"></div>
+	<div id="disqus_thread" style="width:50%; text-align:center;"></div>
 <script>
     /**
      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
