--- a/twenty-three.html
+++ b/twenty-three.html
@@ -134,3 +134,16 @@ Take a guess.<br>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 <script id="dsq-count-scr" src="//soyoungparkgithubio.disqus.com/count.js" async></script>
 </body>
+
+
+<!--google analytics code-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-69249003-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
