--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<p>ampersands dot exit at gmail dot com</p>
 
 		<img src="../images/unithon.jpg" style="width:300px; height:auto; padding-top:30px; padding-bottom:30px; border-radius:50%"/>
-		<p>I draw, code and practice algorithms in C. I want to develop city-related technology. </p>
+		<div style="height:30px;">&nbsp;</div>
 		<p>interests/projects</p>
 		<a href="../kpop">k-pop</a>
 	
