--- a/art.html
+++ b/art.html
@@ -4,7 +4,7 @@ title: Art
 ---
 hello art page
 
-<div id="gallery" style="display:none;">
+<div id="gallery" style="">
         
     <img alt="20170914" src="assets/images/20170914.png"
         data-image="assets/images/20170914.png"
@@ -16,10 +16,3 @@ hello art page
 
 </div>
 
-<script type="text/javascript"> 
-            
-    jQuery(document).ready(function(){ 
-        jQuery("#gallery").unitegallery(); 
-    }); 
-
-</script>
