front end changes

--- a/art.html
+++ b/art.html
@@ -2,17 +2,13 @@
 layout: page
 title: Art
 ---
-hello art page
 
 <div id="gallery" style="">
         
-    <img alt="20170914" src="assets/images/20170914.png"
+    <img alt="20170914" src="./assets/images/digitalart/20170914.png"
         data-image="assets/images/20170914.png"
         data-description="red lips">
-    
-    <img alt="20170914" src="assets/images/20170914.png"
-        data-image="assets/images/20170914.png"
-        data-description="red lips">
+
 
 </div>
 
