--- a/art.html
+++ b/art.html
@@ -5,7 +5,7 @@ title: Art
 
 <div id="gallery" style="">
         
-    <img alt="20170914" src="./assets/images/digitalart/20170914.png"
+    <img alt="20170914" src="../assets/images/digitalart/20170914.png"
         data-image="assets/images/20170914.png"
         data-description="red lips">
 
